--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,9 @@ aside {
 }
 html,
 body {
+    background-color: lavender;
     height: 100%;
+    overflow: hidden;
     width: 100%;
     font-size: 100%;
     line-height: 1;
@@ -50,16 +52,18 @@ h6 {
     margin: 0px 0px 30px 0px;
 }
 .about__items {
-  text-align: center;
+    text-align: center;
 }
 .about__links li {
-  display: inline-block;
-  margin: 0px 30px 0px 0px;
+    display: inline-block;
+    margin: 0px 30px 0px 0px;
 }
-.about__link {
+.about__link a {
+    text-decoration: none;
+    color: #000;
 }
 .about__text {
-  margin: 0px auto 30px auto;
+    margin: 0px auto 30px auto;
     max-width: 688px;
     color: #868585;
     font-size: 14px;
